extra class for Submissionchecks